[gd_scene load_steps=11 format=3 uid="uid://bshl73cgcf80v"]

[ext_resource type="PackedScene" uid="uid://u3x3l7qdjuo" path="res://Objects/arena.tscn" id="1_1ni6f"]
[ext_resource type="Script" path="res://Levels/Level.gd" id="1_p4pr4"]
[ext_resource type="Script" path="res://Levels/ClickableArea.gd" id="2_0djfb"]
[ext_resource type="PackedScene" uid="uid://clm7jxierdq37" path="res://Objects/user-mass-object.tscn" id="3_4tbgd"]
[ext_resource type="LabelSettings" uid="uid://c071m4f3xoir3" path="res://Levels/label_pass.tres" id="4_0unal"]
[ext_resource type="LabelSettings" uid="uid://su7yx3gbk3ld" path="res://Levels/label_fail.tres" id="5_ie5ej"]
[ext_resource type="Shader" path="res://Objects/mass-object.gdshader" id="6_kvt7i"]
[ext_resource type="LabelSettings" uid="uid://d0l2to0txnunh" path="res://Levels/label_size.tres" id="7_bpj6y"]

[sub_resource type="Gradient" id="Gradient_40vku"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_nft5c"]
gradient = SubResource("Gradient_40vku")

[node name="Level" type="Node2D"]
script = ExtResource("1_p4pr4")
init_star_limit = 99
shader = ExtResource("6_kvt7i")
star_scene = ExtResource("3_4tbgd")

[node name="Background" type="TextureRect" parent="."]
offset_right = 1200.0
offset_bottom = 675.0
texture = SubResource("GradientTexture1D_nft5c")

[node name="Arena" parent="." instance=ExtResource("1_1ni6f")]
position = Vector2(600, 337)

[node name="ObjectsContainer" type="Node2D" parent="."]
position = Vector2(600, 337)

[node name="ClickableArea" type="Control" parent="." node_paths=PackedStringArray("container")]
layout_mode = 3
anchors_preset = 0
offset_right = 1200.0
offset_bottom = 675.0
script = ExtResource("2_0djfb")
container = NodePath("../ObjectsContainer")
objective_pass = ExtResource("4_0unal")
objective_fail = ExtResource("5_ie5ej")
shader = ExtResource("6_kvt7i")
color = Color(0, 1, 1, 1)
metadata/_edit_use_anchors_ = true

[node name="GridContainer" type="GridContainer" parent="ClickableArea"]
layout_mode = 0
offset_left = 48.0
offset_top = 24.0
offset_right = 248.0
offset_bottom = 192.0
columns = 2

[node name="Stars" type="Label" parent="ClickableArea/GridContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Stars"
label_settings = ExtResource("7_bpj6y")

[node name="StarsValue" type="Label" parent="ClickableArea/GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "3"
label_settings = ExtResource("7_bpj6y")

[node name="Mass" type="Label" parent="ClickableArea/GridContainer"]
layout_mode = 2
text = "Mass"
label_settings = ExtResource("7_bpj6y")

[node name="MassValue" type="Label" parent="ClickableArea/GridContainer"]
layout_mode = 2
text = "5
"
label_settings = ExtResource("7_bpj6y")

[node name="Size" type="Label" parent="ClickableArea/GridContainer"]
layout_mode = 2
text = "Size
"
label_settings = ExtResource("7_bpj6y")

[node name="SizeValue" type="Label" parent="ClickableArea/GridContainer"]
layout_mode = 2
text = "5
"
label_settings = ExtResource("7_bpj6y")

[node name="VBoxContainer" type="VBoxContainer" parent="ClickableArea"]
layout_mode = 0
offset_left = 960.0
offset_top = 24.0
offset_right = 1121.0
offset_bottom = 72.0

[node name="Title" type="Label" parent="ClickableArea/VBoxContainer"]
layout_mode = 2
text = "Objectives"
label_settings = ExtResource("7_bpj6y")

[node name="Survive" type="Label" parent="ClickableArea/VBoxContainer" groups=["objective"]]
layout_mode = 2
text = "Survive"
label_settings = ExtResource("5_ie5ej")

[node name="Push out everyone" type="Label" parent="ClickableArea/VBoxContainer" groups=["objective"]]
layout_mode = 2
text = "Push out everyone"
label_settings = ExtResource("5_ie5ej")

[node name="WinTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="create_star" from="ClickableArea" to="." method="_on_create_star"]
[connection signal="gui_input" from="ClickableArea" to="ClickableArea" method="_on_gui_input"]
[connection signal="release_star" from="ClickableArea" to="." method="_on_release_star"]
[connection signal="update_star" from="ClickableArea" to="." method="_on_update_star"]
